--- a/Style.css
+++ b/Style.css
@@ -671,7 +671,7 @@ footer {
 
   header {
     height: 25px;
-    transition: 0.5s
+    transition: 0.5s;
   }
   .image-navber {
     display: flex;
